Change desgination of Dr.Middleton
Add full name for team members

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -22,8 +22,10 @@
         <blockquote>
             <small>
                 Project Director:
-                <br>Jonathan N. Middleton, D.M.A.
+                <br>Jonathan N.Middleton, DMA
+                <br>Department of Music
                 <br>Professor of Theory and Composition
+                <br>Interim Department Chair
                 <br>Eastern Washington University
                 <br>musicalgorithms.ewu.edu
             </small>
@@ -36,6 +38,6 @@
    <!-- <p><a class="btn btn-primary btn-lg" href="#howto" role="button">Get Started</a></p> -->
 </div> <!-- End jumbotron -->
 <div class="panel-footer">
-    Team: Vu Nguyen, Travis, Kyle
+    Team: Vu Nguyen, Travis Landers, Kyle Darland
 </div> <!-- End footer -->
 </body>
