Change color for progress bar

--- a/app/views/play.html
+++ b/app/views/play.html
@@ -173,7 +173,7 @@
             <span>Pitch</span>
         </div>
 
-        <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 25%">
+        <div class="progress-bar progress-bar-warning progress-bar" style="width: 25%">
             <span>Duration</span>
         </div>
 
