Change link for keyboard image and resize input in duration

--- a/app/views/duration.html
+++ b/app/views/duration.html
@@ -1,3 +1,10 @@
+<head>
+    <style>
+        .form-inline .form-group input {
+            width:50px;
+        }
+    </style>
+</head>
 <div ng-controller="pitchCtrl">
     <div class="progress">
         <div class="progress-bar progress-bar-success" style="width: 25%">
