--- a/app/views/duration.html
+++ b/app/views/duration.html
@@ -113,13 +113,17 @@
                             </button>
                         </div> <!-- end input -->
                         <div class="col-xs-6 col-md-6">
-                            <div class="form-inline">
 
-                                <p>
-                                    Range
+                            <div class="form-inline">
+                                <div class="form-group">
+                                    <label>Range &emsp;</label>
                                     <input class="form-control" type="text" ng-model="v.durationMinRange">
-                                    to
+                                </div>
+                                <div class="form-group">
+                                    <label>&emsp;&emsp;To &emsp;</label>
                                     <input class="form-control" type="text" ng-model="v.durationMaxRange">
+                                </div>
+                                <div class="form-group">
                                     <!--Tooltip for input range-->
                                     <button type="button" class="btn btn-link tooltip-right" data-toggle="tooltip"
                                             data-original-title="{{durationRangeTooltip}}" data-placement="top">
@@ -129,20 +133,19 @@
                                     <button type="button" class="btn btn-link tooltip-right" data-toggle="modal" data-target="#myModalRythm">
                                         <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
                                     </button>
+                                </div>
+                            </div>
+                            <p></p>
+                            <div class="form-inline">
+                                Select algorithm for duration:
+                                <select class="form-control"
+                                        ng-change="updateDurationMapping($index)"
+                                        ng-model="v.durationAlgorithm"
+                                        ng-options="x for x in algorithmNames">
+                                </select>
 
-                                </p>
+                                <ng-include src="'views/durationAlgorithmTooltip.html'"></ng-include>
 
-
-                                <p>
-                                    Select algorithm for duration:
-                                    <select class="form-control"
-                                            ng-change="updateDurationMapping($index)"
-                                            ng-model="v.durationAlgorithm"
-                                            ng-options="x for x in algorithmNames">
-                                    </select>
-
-                                    <ng-include src="'views/durationAlgorithmTooltip.html'"></ng-include>
-                                </p>
                             </div>
 
                             <p>
