Add piano keyboard with white and black keys
Light up keyboard when playing

--- a/app/views/play.html
+++ b/app/views/play.html
@@ -286,7 +286,128 @@
             </md-input-container>
         </md-slider-container>
     </md-content>
-    <div >
+    <div>
+        <div id="pianoBody">
+            <div id="o00" class="octave">
+                <div class="keyWhite" id="1" style="width:50%"></div>
+                <div class="keyWhite" id="3" style="width:50%"></div>
+                <div class="keyBlack" id="2" style="width:25%; left:35.16%"></div>
+            </div>
+            <div id="o0" class="octave">
+                <div class="keyWhite" id="4"></div>
+                <div class="keyWhite" id="6"></div>
+                <div class="keyWhite" id="8"></div>
+                <div class="keyWhite" id="9"></div>
+                <div class="keyWhite" id="11"></div>
+                <div class="keyWhite" id="13"></div>
+                <div class="keyWhite" id="15"></div>
+                <div class="flats">
+                    <div class="keyBlack" id="5"></div>
+                    <div class="keyBlack" id="7"></div>
+                    <div class="keyBlack" id="10"></div>
+                    <div class="keyBlack" id="12"></div>
+                    <div class="keyBlack" id="14"></div></div>
+            </div>
+            <div id="o1" class="octave">
+                <div class="keyWhite" id="16"></div>
+                <div class="keyWhite" id="18"></div>
+                <div class="keyWhite" id="20"></div>
+                <div class="keyWhite" id="21"></div>
+                <div class="keyWhite" id="23"></div>
+                <div class="keyWhite" id="25"></div>
+                <div class="keyWhite" id="27"></div>
+                <div class="flats">
+                    <div class="keyBlack" id="17"></div>
+                    <div class="keyBlack" id="19"></div>
+                    <div class="keyBlack" id="22"></div>
+                    <div class="keyBlack" id="24"></div>
+                    <div class="keyBlack" id="26"></div></div>
+            </div>
+            <div id="o2" class="octave">
+                <div class="keyWhite" id="28"></div>
+                <div class="keyWhite" id="30"></div>
+                <div class="keyWhite" id="32"></div>
+                <div class="keyWhite" id="33"></div>
+                <div class="keyWhite" id="35"></div>
+                <div class="keyWhite" id="37"></div>
+                <div class="keyWhite" id="39"></div>
+                <div class="flats">
+                    <div class="keyBlack" id="29"></div>
+                    <div class="keyBlack" id="31"></div>
+                    <div class="keyBlack" id="34"></div>
+                    <div class="keyBlack" id="36"></div>
+                    <div class="keyBlack" id="38"></div></div>
+            </div>
+            <div id="o3" class="octave">
+                <div class="keyWhite" id="40"></div>
+                <div class="keyWhite" id="42"></div>
+                <div class="keyWhite" id="44"></div>
+                <div class="keyWhite" id="45"></div>
+                <div class="keyWhite" id="47"></div>
+                <div class="keyWhite" id="49"></div>
+                <div class="keyWhite" id="51"></div>
+                <div class="flats">
+                    <div class="keyBlack" id="41"></div>
+                    <div class="keyBlack" id="43"></div>
+                    <div class="keyBlack" id="46"></div>
+                    <div class="keyBlack" id="48"></div>
+                    <div class="keyBlack" id="50"></div></div>
+            </div>
+            <div id="o4" class="octave">
+                <div class="keyWhite" id="52"></div>
+                <div class="keyWhite" id="54"></div>
+                <div class="keyWhite" id="56"></div>
+                <div class="keyWhite" id="57"></div>
+                <div class="keyWhite" id="59"></div>
+                <div class="keyWhite" id="61"></div>
+                <div class="keyWhite" id="63"></div>
+                <div class="flats">
+                    <div class="keyBlack" id="53"></div>
+                    <div class="keyBlack" id="55"></div>
+                    <div class="keyBlack" id="58"></div>
+                    <div class="keyBlack" id="60"></div>
+                    <div class="keyBlack" id="62"></div></div>
+            </div>
+            <div id="o5" class="octave">
+                <div class="keyWhite" id="64"></div>
+                <div class="keyWhite" id="66"></div>
+                <div class="keyWhite" id="68"></div>
+                <div class="keyWhite" id="69"></div>
+                <div class="keyWhite" id="71"></div>
+                <div class="keyWhite" id="73"></div>
+                <div class="keyWhite" id="75"></div>
+                <div class="flats">
+                    <div class="keyBlack" id="65"></div>
+                    <div class="keyBlack" id="67"></div>
+                    <div class="keyBlack" id="70"></div>
+                    <div class="keyBlack" id="72"></div>
+                    <div class="keyBlack" id="74"></div></div>
+            </div>
+
+            <div id="o6" class="octave">
+                <div class="keyWhite" id="76"></div>
+                <div class="keyWhite" id="78"></div>
+                <div class="keyWhite" id="80"></div>
+                <div class="keyWhite" id="81"></div>
+                <div class="keyWhite" id="83"></div>
+                <div class="keyWhite" id="85"></div>
+                <div class="keyWhite" id="87"></div>
+                <div class="flats">
+                    <div class="keyBlack" id="77"></div>
+                    <div class="keyBlack" id="79"></div>
+                    <div class="keyBlack" id="82"></div>
+                    <div class="keyBlack" id="84"></div>
+                    <div class="keyBlack" id="86"></div></div>
+            </div>
+            <div id="o7" class="octave">
+                <div class="keyWhite" id="88" style="width:100%"></div>
+            </div>
+
+        </div>
+        <div id="keys">
+
+
+        </div>
         <div style="overflow: hidden;" id="colors"></div>
         <div class="player">
 
