--- a/app/views/duration.html
+++ b/app/views/duration.html
@@ -135,9 +135,12 @@
                                         <span class="glyphicon glyphicon-info-sign" aria-hidden="true" ></span>
                                     </button>
                                     <!-- Button trigger modal -->
+                                    <!--
                                     <button type="button" class="btn btn-link tooltip-right" data-toggle="modal" data-target="#myModalRythm">
                                         <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
                                     </button>
+                                    -->
+                                    <img ng-src="./img/favicon.ico" ng-click="openRythm()">
                                 </div>
                             </div>
                             <p></p>
