--- a/app/views/scaleOptions.html
+++ b/app/views/scaleOptions.html
@@ -18,7 +18,7 @@
     </button>
     <div id="products" class="row list-group" >
         <div class="item  col-xs-6 col-lg-6" ng-repeat="v in allVoices">
-            <div class="thumbnail">
+            <div id="playBorder{{$index+1}}" class="thumbnail">
                 <div class="caption">
                     <h4 class="group inner list-group-item-heading">
                         Voice {{$index + 1}}
