Add box around rhythm image

--- a/app/views/duration.html
+++ b/app/views/duration.html
@@ -140,7 +140,9 @@
                                         <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
                                     </button>
                                     -->
-                                    <img ng-src="./img/favicon.ico" ng-click="openRythm()">
+                                    <button type="button" class="btn btn-default">
+                                        <span class="glyphicon glyphicon-music" aria-hidden="true" ng-click="openRythm()"></span>
+                                    </button>
                                 </div>
                             </div>
                             <p></p>
