Modify protein button
Only show protein button in protein option. Previously, protein buttion appreas in all options

--- a/app/views/setTooltip.html
+++ b/app/views/setTooltip.html
@@ -67,6 +67,7 @@
                  data-placement="right"
                  ng-if="v.selectedSet == 'Protein'">
     <span class="glyphicon glyphicon-info-sign" aria-hidden="true" ></span>
+    <img src="img/protein.jpg" width="60" height="35" ng-click="openProtein()">
 </button>
 
 <button type="button" class="btn btn-link tooltip-right" data-toggle="tooltip"
