--- a/app/views/pitchUtilityModal.html
+++ b/app/views/pitchUtilityModal.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <div ng-show="utilFunc.invertType == 'invertValue' && utilFunc.main == 'invert' ">
-                    Enter your value: <input type="text" ng-model="utilFunc.customVal">
+                    Enter your value 222: <input type="text" ng-model="utilFunc.customVal">
                 </div>
 
                 <!-- End Invert -->
